--- a/.github/workflows/compile-latex.yml
+++ b/.github/workflows/compile-latex.yml
@@ -15,4 +15,4 @@ jobs:
         uses: dante-ev/latex-action@master
         with:
           root_file: cv.tex
-          args: -output-directory cv_es '\def \LANG {es} \input'
+          args: -pdf -latexoption=-file-line-error -latexoption=-interaction=nonstopmode ---output-directory cv_es '\def \LANG {es} \input'
