--- a/.github/workflows/compile-latex.yml
+++ b/.github/workflows/compile-latex.yml
@@ -10,7 +10,7 @@ jobs:
         uses: dante-ev/latex-action@master
         with:
           root_file: cv.tex
-          args: "-pdf -latexoption=-file-line-error -latexoption=-interaction=nonstopmode -output-directory=cv_en -pretex='\def \LANG {en}' -usepretex cv"
+          args: "-pdf -latexoption=-file-line-error -latexoption=-interaction=nonstopmode -output-directory=cv_en -pretex=\'\def \LANG {en}\' -usepretex cv"
       - name: Build spanish CV
         uses: dante-ev/latex-action@master
         with:
