--- a/.github/workflows/compile-latex.yml
+++ b/.github/workflows/compile-latex.yml
@@ -16,23 +16,23 @@ jobs:
         with:
           root_file: cv.tex
           args: -pdf -latexoption=-file-line-error -latexoption=-interaction=nonstopmode -output-directory=cv_es -pretex=\def\LANG{es} -usepretex cv
-      # - name: Create Release
-      #   id: create_release
-      #   uses: actions/create-release@v1
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     tag_name: latest
-      #     release_name: CV
-      #     draft: false
-      #     prerelease: false
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: CV ${{ github.ref }}
+          draft: false
+          prerelease: false
       - name: Upload English CV
         id: upload-release-asset-en
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: https://uploads.github.com/repos/teofr/CV/releases/latest/assets{?name,label} 
+          upload_url: ${{ steps.create_release.outputs.upload_url }} 
           asset_path: ./cv_en/cv.pdf
           asset_name: cv_en.pdf
           asset_content_type: application/pdf
@@ -42,7 +42,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: https://uploads.github.com/repos/teofr/CV/releases/latest/assets{?name,label}
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./cv_es/cv.pdf
           asset_name: cv_es.pdf
           asset_content_type: application/pdf
