--- a/.github/workflows/compile-latex.yml
+++ b/.github/workflows/compile-latex.yml
@@ -10,39 +10,19 @@ jobs:
         uses: dante-ev/latex-action@master
         with:
           root_file: cv.tex
-          args: -pdf -latexoption=-file-line-error -latexoption=-interaction=nonstopmode -output-directory=cv_en -pretex=\def\LANG{en} -usepretex cv
+          args: -pdf -latexoption=-file-line-error -latexoption=-interaction=nonstopmode -output-directory=cv_en -usepretex="\def\LANG{en}" -jobname=%A_en
       - name: Build spanish CV
         uses: dante-ev/latex-action@master
         with:
           root_file: cv.tex
-          args: -pdf -latexoption=-file-line-error -latexoption=-interaction=nonstopmode -output-directory=cv_es -pretex=\def\LANG{es} -usepretex cv
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          args: -pdf -latexoption=-file-line-error -latexoption=-interaction=nonstopmode -output-directory=cv_es -usepretex="\def\LANG{es}" -jobname=%A_es
+      - uses: meeDamian/github-release@2.0
         with:
-          tag_name: ${{ github.ref }}
-          release_name: CV ${{ github.ref }}
-          draft: false
-          prerelease: false
-      - name: Upload English CV
-        id: upload-release-asset-en
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} 
-          asset_path: ./cv_en/cv.pdf
-          asset_name: cv_en.pdf
-          asset_content_type: application/pdf
-      - name: Upload Spanish CV
-        id: upload-release-asset-es
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./cv_es/cv.pdf
-          asset_name: cv_es.pdf
-          asset_content_type: application/pdf
+          token: ${{ secrets.GITHUB_TOKEN }}
+          tag: ARC
+          name: Automatic Resume Compilation  
+          gzip: false
+          files: >
+            cv_es/cv_es.pdf
+            cv_en/cv_en.pdf
+          allow_override: true
